--- a/dev/scss/sections/_section-1.scss
+++ b/dev/scss/sections/_section-1.scss
@@ -111,7 +111,7 @@
             #header {
                 z-index: 150;
                 position: absolute;
-                margin-top: 330px;
+                margin-top: 220px;
 
                 h1 {
                     font-size: rem-calc(40);
